# Fianchetto-Engine

./: .gitignore  QUICKSTART.md  README.md
docker/: Dockerfile.engine  Dockerfile.explain  Dockerfile.neural  Dockerfile.web  docker-compose.yml
docs/: API_SPEC.md  ENGINE_DESIGN.md  EXPLAIN_DESIGN.md  FRONTEND_SPEC.md  NEURAL_DESIGN.md  SEARCH_ALGO.md
engine/: CMakeLists.txt
engine/include/: board.hpp  movegen.hpp  neural_client.hpp  search.hpp  types.hpp
engine/src/: board.cpp  movegen.cpp  neural_client.cpp  perft.cpp  search.cpp  types.cpp  uci_main.cpp
engine/tests/: perft_tests.cpp
explain/: pyproject.toml  requirements.txt
explain/src/: __init__.py  api.py  explanation_engine.py  features.py  stockfish_client.py  templates.py
neural/: pyproject.toml  requirements.txt
neural/src/: __init__.py  api.py  dataset.py  encode.py  export_onnx.py  model.py  train.py
web/: next.config.js  package-lock.json  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/explain/: route.ts
web/app/api/move/: route.ts
web/components/: EvaluationBar.tsx  ExplanationPanel.tsx  MoveHistory.tsx
